--- a/public/css/about.css
+++ b/public/css/about.css
@@ -171,6 +171,22 @@ a:hover {
     font-weight: 300;
     width: 700px;
 }
+/* タイピングのcss */
+.TextTyping span{
+    display: none;
+}
+
+
+/*文字列後ろの線の設定*/
+.TextTyping::after {
+ 	content: "|";
+	animation: typinganime .8s ease infinite;
+}
+
+@keyframes typinganime{
+	from{opacity:0}
+	to{opacity:1}
+}
 .work-name {
     color: #707070;
     margin-left: 65px;
