レスポンシブ対応に変更

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3,23 +3,23 @@
 /* Loading背景画面設定　*/
 #splash {
     /*fixedで全面に固定*/
-	position: fixed;
-	width: 100%;
-	height: 100%;
-	z-index: 999;
-	text-align:center;
-	color:#fff;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    z-index: 999;
+    text-align: center;
+    color: #fff;
 }
 
 /* Loading画像中央配置　*/
 #splash_text {
-	position: absolute;
-	top: 50%;
-	left: 50%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
     z-index: 999;
-	transform: translate(-50%, -50%);
-	color: #fff;
-	width: 100%;
+    transform: translate(-50%, -50%);
+    color: #fff;
+    width: 100%;
 }
 
 /*割れる画面のアニメーション*/
@@ -30,6 +30,7 @@
     transition: all .2s cubic-bezier(.04, .435, .315, .9);
     transform: scaleY(1);
 }
+
 /*上の画面*/
 .loader_cover-up {
     transform-origin: center top;
@@ -41,6 +42,7 @@
     bottom: 0;
     transform-origin: center bottom;
 }
+
 /*クラス名がついたらY軸方向に0*/
 .coveranime {
     transform: scaleY(0);
@@ -49,8 +51,8 @@
 /*========= レイアウトのためのCSS ===============*/
 
 
-#container{
-    width:100%;
+#container {
+    width: 100%;
     height: 100vh;
     background: #ccc;
     display: flex;
@@ -59,29 +61,32 @@
     text-align: center;
 }
 
-a{
+a {
     color: #333;
 }
 
-a:hover{
-     text-decoration: none;   
+a:hover {
+    text-decoration: none;
 }
 
 /*========= 背景動画設定のCSS ===============*/
 
 /*header設定*/
-#header{
-    position: relative;/*h1の中央寄せ配置の起点とするためのrelative*/
-    height: 100vh;/*高さを全画面にあわせる*/
-} 
+#header {
+    position: relative;
+    /*h1の中央寄せ配置の起点とするためのrelative*/
+    height: 100vh;
+    /*高さを全画面にあわせる*/
+}
 
-#video-area{
+#video-area {
     position: fixed;
-    z-index: -1;/*最背面に設定*/
+    z-index: -1;
+    /*最背面に設定*/
     top: 0;
-    right:0;
-    left:0;
-    bottom:0;
+    right: 0;
+    left: 0;
+    bottom: 0;
     overflow: hidden;
 }
 
@@ -93,8 +98,10 @@ a:hover{
     left: 50%;
     transform: translate(-50%, -50%);
     /*縦横幅指定*/
-    width: 177.77777778vh; /* 16:9 の幅→16 ÷ 9＝ 177.77% */
-    height: 56.25vw; /* 16:9の幅 → 9 ÷ 16 = 56.25% */
+    width: 177.77777778vh;
+    /* 16:9 の幅→16 ÷ 9＝ 177.77% */
+    height: 56.25vw;
+    /* 16:9の幅 → 9 ÷ 16 = 56.25% */
     min-height: 100%;
     min-width: 100%;
 }
@@ -104,31 +111,35 @@ a:hover{
     max-width: 30%;
     margin-left: 7%;
 }
+
 /* 名前・コメントの位置 */
-.page-name{
+.page-name {
     font-size: 80px;
     margin-top: 1%;
     color: #24425A;
 }
-.home-content
-{
-text-align: center;
-padding-top:7%;
+
+.home-content {
+    text-align: center;
+    padding-top: 7%;
 }
-.home-content p{
+
+.home-content p {
     font-size: 1.2rem;
     margin: 15px 0 42px;
     color: #24425A;
 }
-.home-content span{
-    background: rgb(219, 243, 8,0.4);
+
+.home-content span {
+    background: rgb(219, 243, 8, 0.4);
     padding: 0px 3px;
-    border-radius:4px;
+    border-radius: 4px;
 }
+
 /* ボタンの位置 */
-.main-nav{
+.main-nav {
     display: flex;
-    font-size:1.25rem;
+    font-size: 1.25rem;
     text-transform: uppercase;
     list-style-type: none;
     /* margin-left: 35%; */
@@ -136,16 +147,37 @@ padding-top:7%;
     margin-right: 30px;
     margin-right: 35px;
 }
-.main-nav li{
-margin-left:36px;
-background-color: #24425A;
-padding: 2px 15px;
+
+.main-nav li {
+    margin-left: 36px;
+    background-color: #24425A;
+    padding: 2px 15px;
 
 }
-.main-nav a{
-    color:#FFFFFF;
+
+.main-nav a {
+    color: #FFFFFF;
     text-decoration: none;
 }
-.main-nav a:hover{
+
+.main-nav a:hover {
     clear: #0bd;
 }
+
+/* レスポンシブ対応 */
+@media (max-width: 767px) {
+    img.main-icon {
+        max-width: 60%;
+        margin-left: 7%;
+        margin-top: 35%;
+    }
+    .page-name{
+        font-size: 50px;
+    }
+    .main-nav li {
+        margin-left: 30px;
+    }
+    .main-nav {
+        margin-right: 65px;
+    }
+ }
