--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -226,10 +226,44 @@ span {
 @media (max-width: 767px) {
     #video {
         top: 50%;
-        transform: translate(-85%, -50%);
+        transform: translate(-80%, -50%);
     }
 
     #splash {
         position: absolute;
+    }
+      /* headerの変更 */
+      .main-icon {
+        max-width: 26%;
+        padding-left: 10px;
+    }
+
+    .main-nav {
+        margin-left: 0px;
+        padding: 0%;
+        margin-top: 10px;
+        margin-bottom: 0px;
+    }
+
+    .page-header {
+        display: contents;
+    }
+
+    .main-nav li {
+        margin-left: 24px;
+    }
+
+    .main-name {
+        padding-left: 15px;
+        font-size: 20px;
+    }
+
+    .main-title {
+        font-size: 60px;
+        margin-bottom: 0%;
+        padding-left: 15px;
+    }
+    .main-list {
+        padding-left: 14px;
     }
 }
