--- a/public/css/design.css
+++ b/public/css/design.css
@@ -281,6 +281,8 @@ p.black-footer {
     #video {
         top: 50%;
         transform: translate(-80%, -50%);
+        min-height: 110%;
+        width: 249.777778vh;
     }
 
     #splash {
