レスポンシブ対応　背景画像変更

--- a/public/css/front.css
+++ b/public/css/front.css
@@ -307,7 +307,8 @@ p.black-footer {
     #video {
         top: 50%;
         transform: translate(-80%, -50%);
-        width: 168.777778vh;
+        /* width: 168.777778vh; */
+        width: 112.777778vh;
     }
 
     #splash {
