--- a/public/css/design.css
+++ b/public/css/design.css
@@ -278,12 +278,11 @@ p.black-footer {
 }
 
 @media (max-width: 767px) {
-    #video {
+    /* #video {
         top: 50%;
         transform: translate(-80%, -50%);
         width: 112.777778vh;
-        display: none;
-    }
+    } */
 
     #splash {
         position: absolute;
