--- a/public/css/design.css
+++ b/public/css/design.css
@@ -279,9 +279,8 @@ p.black-footer {
 
 @media (max-width: 767px) {
     #video {
-        /* top: 50%;
-        transform: translate(-80%, -50%);
-        width: 112.777778vh; */
+        transform: translate(-87%, -50%);
+        width: 177.777778vh;
     }
 
     #splash {
