--- a/public/css/front.css
+++ b/public/css/front.css
@@ -305,7 +305,7 @@ p.black-footer {
 
 @media (max-width: 767px) {
     #video {
-        transform: translate(-87%, -50%);
+        transform: translate(-84%, -50%);
         width: 177.777778vh;
     }
     #splash {
@@ -367,5 +367,8 @@ img.quiz {
 }
 li.works-quiz {
     margin-left: 28%;
+}
+p.black-footer {
+    margin-top: 28%;
 }
 }
