--- a/public/css/front.css
+++ b/public/css/front.css
@@ -329,7 +329,12 @@ p.black-footer {
     margin-top: 40px;
     margin-bottom: 0px;
 }
-
+.sub-title {
+    color: white;
+}
+.sub-dot {
+    color: white;
+}
 .page-header {
     display: contents;
 }
